<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tracker.psikosos.presto.Challenge3Activity"
    android:orientation="vertical"
    android:nestedScrollingEnabled="true">

    <TextView android:text="@string/your_id" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_id_3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="&lt;ID 3>"
        android:id="@+id/your_id_content_3" />

    <TextView
        android:text="@string/your_id_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView android:text="@string/your_challenge_3" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_challenge_3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/wallet_primary_text_holo_light"
        android:textSize="35px"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tantangan_3"
        android:textSize="25px"
        android:id="@+id/your_challenge_content_3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ambil Foto!"
        android:id="@+id/take_picture_3"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="takePicture" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photo_result3"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
