<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tracker.psikosos.presto.ChallengeActivity"
    android:orientation="vertical"
    android:onClick="takePicture">

    <TextView android:text="@string/your_id" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_id"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Medium Text"
        android:id="@+id/your_id_content" />

    <TextView
        android:text="@string/your_id_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView android:text="@string/your_challenge" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_challenge"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Medium Text"
        android:id="@+id/your_challenge_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ambil Foto!"
        android:id="@+id/take_picture"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="takePicture" />


</LinearLayout>
